[gd_scene load_steps=3 format=3 uid="uid://5g33gfmnxhl7"]

[ext_resource type="Script" path="res://scenes/screens/modal_escape_menu.gd" id="1_c3aj0"]
[ext_resource type="PackedScene" uid="uid://cinep6l1m4ggw" path="res://scenes/screens/screen_settings_menu.tscn" id="2_5pmh4"]

[node name="EscapeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c3aj0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueBtn" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CONTINUE"

[node name="SettiongsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="MainMenuBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="ScreenSettingsMenu" parent="." instance=ExtResource("2_5pmh4")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/SettiongsBtn" to="." method="_on_settiongs_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
